[package]
name = "web3-rpc"
version = "0.1.10"
edition = "2021"
authors = ["matrix-tang <matrix.tang@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Ethereum JSON-RPC Client"
readme = "README.md"
homepage = "https://github.com/matrix-tang/web3-rpc"
repository = "https://github.com/matrix-tang/web3-rpc"
keywords = ["web3", "ethereum", "rpc", "api"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
error-stack = { version = "0.4", features = ["anyhow"] }
serde_json = "1.0.79"
serde_path_to_error = "0.1"
serde = { version = "1.0.136", features = ["derive"] }
tracing = "*"
anyhow = "*"
